@@ -110,6 +110,7 @@ dpkg (1.18.0) UNRELEASED; urgency=low
     - Fix dpkg-divert unit test to work when there is no /dev/full.
     - Skip test cases when there is no c++filt available.
     - Add test cases for Dpkg::Conf and Dpkg::Checksums.
+    - Handle libtool executables in progname unit test.
   * Build system:
     - Bump gettext version to 0.19:
       + Use --add-location=file in msgmerge and xgettext commands.
